removed scrolling navbar due to it causing readability issues, added links throughout the page for quick scrolling back to the top until a navbar fix can be implemented

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,7 @@ ol[class*="list"] {
 	display: inline-block;
 	vertical-align: middle;
 }
+
+.back-home {
+	justify-content: center;
+}
